# src/routes/swagger.json
@@ -30,29 +30,32 @@
                 "data": {
                   "type": "object",
                   "example": {
-                    "id": 1,
-                    "name": "Charizard",
-                    "type": "fuego",
-                    "life": 100,
-                    "attacks": [
-                      {
-                        "type": "fuego",
-                        "power": 100
-                      },
-                      {
-                        "type": "agua",
-                        "power": 80
-                      },
-                      {
-                        "type": "normal",
-                        "power": 20
-                      },
-                      {
-                        "type": "planta",
-                        "power": 80
-                      }
-                    ],
-                    "status": "disponible"
+                    "pokemon": {
+                      "id": 1,
+                      "name": "Charizard",
+                      "type": "fuego",
+                      "life": 100,
+                      "attacks": [
+                        {
+                          "type": "fuego",
+                          "power": 100
+                        },
+                        {
+                          "type": "agua",
+                          "power": 80
+                        },
+                        {
+                          "type": "normal",
+                          "power": 20
+                        },
+                        {
+                          "type": "planta",
+                          "power": 80
+                        }
+                      ]
+                    },
+                    "status": "disponible",
+                    "player": "Renato"
                   }
                 }
               }
@@ -157,30 +160,39 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "player": {
                   "type": "string",
-                  "example": "Charizard"
+                  "example": "Renato"
                 },
-                "type": {
-                  "type": "string",
-                  "example": "fire"
-                },
-                "life": {
-                  "type": "integer",
-                  "example": 200
-                },
-                "attacks": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "type": {
-                        "type": "string",
-                        "example": "fuego"
-                      },
-                      "power": {
-                        "type": "integer",
-                        "example": 100
+                "pokemon": {
+                  "type": "object",
+                  "example": {
+                    "name": {
+                      "type": "string",
+                      "example": "Charizard"
+                    },
+                    "type": {
+                      "type": "string",
+                      "example": "fire"
+                    },
+                    "life": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "attacks": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "type": {
+                            "type": "string",
+                            "example": "fuego"
+                          },
+                          "power": {
+                            "type": "integer",
+                            "example": 100
+                          }
+                        }
                       }
                     }
                   }
